--- a/package.json
+++ b/package.json
@@ -1,18 +1,48 @@
 {
-  "dependencies": {
-    "axios": "^1.3.4",
-    "dotenv": "^16.0.3",
-    "fs": "^0.0.1-security",
-    "https": "^1.0.0",
-    "obs-websocket-js": "^5.0.2"
-  },
-  "scripts": {
-    "start": "node server.js"
-  },
-  "name": "obsserver",
-  "version": "1.0.0",
+  "name": "obs_weather_server",
+  "version": "0.2.0",
+  "description": "A OBS Plugin to Display Weather Alerts",
   "main": "server.js",
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  "license": "AGPL-3.0-or-later",
+  "scripts": {
+    "build": "ncc build -o dist/lib ./server.js && pkg --out-path ./dist ./dist/lib/index.js"
+  },
+  "dependencies": {
+    "ansi-align": "^3.0.1",
+    "ansi-regex": "^4.1.1",
+    "ansi-styles": "^3.2.1",
+    "asynckit": "^0.4.0",
+    "axios": "^1.3.4",
+    "boxen": "^4.0.0",
+    "camelcase": "^5.3.1",
+    "chalk": "^2.4.2",
+    "cli-boxes": "^2.2.1",
+    "color-convert": "^1.9.3",
+    "combined-stream": "^1.0.8",
+    "crypto-js": "^4.1.1",
+    "debug": "^4.3.4",
+    "delayed-stream": "^1.0.0",
+    "emoji-regex": "^7.0.3",
+    "escape-string-regexp": "^1.0.5",
+    "eventemitter3": "^4.0.7",
+    "follow-redirects": "^1.15.2",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
+    "has-flag": "^3.0.0",
+    "https": "^1.0.0",
+    "is-fullwidth-code-point": "^2.0.0",
+    "isomorphic-ws": "^4.0.1",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "ms": "^2.1.2",
+    "obs-websocket-js": "^5.0.2",
+    "proxy-from-env": "^1.1.0",
+    "string-width": "^3.1.0",
+    "strip-ansi": "^5.2.0",
+    "supports-color": "^5.5.0",
+    "term-size": "^2.2.1",
+    "type-fest": "^2.19.0",
+    "widest-line": "^3.1.0",
+    "ws": "^8.13.0"
+  }
 }
