--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "ms": "^2.1.2",
+    "mustache": "^4.2.0",
     "obs-websocket-js": "^5.0.2",
     "proxy-from-env": "^1.1.0",
     "string-width": "^3.1.0",
